# bsh

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  Makefile  README.md  azure-pipelines.yml  background_jobs.c  background_jobs.h  bsh.c  builtins.c  builtins.h  env.c  env.h  history.c  history.h  main.c  parse.c  parse.h  shell.c  stack.c  stack.h  types.h
.github/workflows/: automerge.yml
cmake/: FindCheck.cmake  FindReadline.cmake
dependencies/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in
docker/linux/: Dockerfile
src/: CMakeLists.txt  alias.c  alias.h  background_jobs.c  bg_jobs.c  bg_jobs.h  bhash.c  bhash.h  builtins.c  builtins.h  circular_queue.c  circular_queue.h  dbg.h  env.c  env.h  history.c  history.h  job.c  job.h  linked_list.c  linked_list.h  main.c  node.c  node.h  parse.c  parse.h  stack.c  stack.h  util.c  util.h  utils.c  utils.h  variables.c  variables.h
tests/: CMakeLists.txt  Makefile  test_bsh.h  test_bsh_alias.c  test_bsh_bhash.c  test_bsh_circular_queue.c  test_bsh_history.c  test_bsh_job.c  test_bsh_main.c  test_bsh_parse.c  test_bsh_stack.c  test_bsh_util.c  test_stack.c  test_util.c  test_util.h  test_utils.h
